# vila

./: .env.example  .gitignore  INTEGRATION.md  README.md  package.json
.github/workflows/: ci.yml  deploy.yml
app/: .vercelignore  next.config.js  package.json  tailwind.config.js
app/public/circuits/: subset_final.zkey  subset_verification_key.json
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/components/: AppShell.tsx  ConnectWallet.tsx
app/src/lib/: corridors.ts  (+13 more)
circuits/: input.json  package.json  subset.circom  withdraw.circom
circuits/lib/: commitment.circom  dualMux.circom  merkleTree.circom
contracts/: Cargo.toml
contracts/groth16-verifier/: Cargo.toml  build.rs
contracts/groth16-verifier/src/: lib.rs  test.rs
contracts/groth16-verifier/test_snapshots/test/: test_initialize.1.json  test_num_public_inputs.1.json
contracts/swap-router/: Cargo.toml
contracts/swap-router/src/: lib.rs
contracts/vila-pool/: Cargo.toml
contracts/vila-pool/src/: lib.rs  merkle.rs  test.rs  types.rs
contracts/vila-pool/test_snapshots/test/: test_initialize.1.json  test_merkle_tree_init.1.json  test_nullifier_not_spent.1.json
relayer/: package.json
relayer/src/: index.ts  queue.ts  submit.ts
scripts/: compile-circuit.sh  compile-subset.sh  demo-e2e.ts  demo.sh  deploy-new-tiers.sh  deploy-pools.sh  deploy.sh  generate-test-proof.ts  generate-valid-input.ts  initialize-contracts.ts  setup-ceremony.sh  setup-subset-ceremony.sh
sdk/: package.json
sdk/src/: index.ts  merkle.ts  note.ts  proof.ts  relayer.ts  types.d.ts  viewing-keys.ts  vila.ts
(+17 files in other folders)
