[workspace]
resolver = "2"
members = [
    "groth16-verifier",
    "swap-router",
    "vila-pool",
]

[workspace.dependencies]
soroban-sdk = "26.1.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
